# quote-server

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  askama.toml  build.rs
assets/css/: style.css
assets/js/: script.js
migrations/: 001_initial.down.sql  001_initial.up.sql
src/: database.rs  error.rs  main.rs  models.rs  routes.rs
templates/: base.html  index.html
